add jp-post demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "jp-post": [
+        "dist/jp-post/jp-post",
+        "dist/jp-post"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
