--- a/projects/jp-post/package.json
+++ b/projects/jp-post/package.json
@@ -1,6 +1,11 @@
 {
   "name": "jp-post",
-  "version": "0.0.1",
+  "version": "0.0.3",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/koichi-ezato/angular-libraries/tree/master/projects/jp-post"
+  },
   "peerDependencies": {
     "@angular/common": "^9.1.9",
     "@angular/core": "^9.1.9"
