--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        project: [app, lib]
+        project: [lib, app]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,7 +31,7 @@ jobs:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles(format('{0}{1}', github.workspace, '/package.json')) }}
 
-    - name: npm install, build, and test
+    - name: npm install, build
       run: |
         npm install
         npm run build:${{ matrix.project }}
