--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:lib": "ng build --project jp-post",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng deploy --base-href=/angular-libraries/ --message='[skip ci] deploy to GitHub Pages'"
   },
   "private": true,
   "dependencies": {
