--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: build and deploy
         run: |
           npm install
-          npm run deploy -- --repo=https://github.com/koichi-ezato/angular-libraries.git --name="$GITHUB_USERNAME" --email="$GITHUB_EMAIL"
+          npm run deploy
         env:
           CI: true
           GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
