--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,15 +5,36 @@ on:
     branches:
       - master
   pull_request:
-    branches: [ master ]
-jobs:
-  build:
+    branches:
+      - master
 
+jobs:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: All things angular
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 13.x
+
+      - name: cache
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles(format('{0}{1}', github.workspace, '/package.json')) }}
+
+      - name: build and deploy
+        run: |
+          npm install
+          npm run deploy
+        env:
+          CI: true
+          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+          GITHUB_EMAIL: ${{ secrets.GITHUB_EMAIL }}
+
+      - name: publish
         uses: AhsanAyaz/angular-deploy-gh-pages-actions
         with:
           github_access_token: ${{ secrets.ACCESS_TOKEN }} # see the Configuration section for how you can create secrets
