--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -35,7 +35,7 @@ jobs:
           GITHUB_EMAIL: ${{ secrets.GITHUB_EMAIL }}
 
       - name: publish
-        uses: AhsanAyaz/angular-deploy-gh-pages-actions
+        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.2.0
         with:
           github_access_token: ${{ secrets.ACCESS_TOKEN }} # see the Configuration section for how you can create secrets
           build_configuration: staging # The build environment for the app. please look configurations in your angular.json
